--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container">
       <div class="row">
 	      <div class="col-xl-6">
-		      <h1 class="display-2">dgbox<span class="vim-caret">&nbsp</span></h1>
+		      <h1 class="display-2">dgbox.io<span class="vim-caret">&nbsp</span></h1>
 	      <h1 style="color:#FFEA00;text-shadow: 0px 6px 1px #4d4d4d;">disrupting fintech technology</h1>
 	      </div>
 
