--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
-<link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<link rel="stylesheet" href="css/bootstrap4-neon-glow.min.css">
+    <!--  
+	    <link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
+	    <link rel="stylesheet" href="css/bootstrap4-neon-glow.min.css">
+	    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    -->
+    <link rel="stylesheet" href="css/bootstrap4-neon-glow.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
   </head>
   <body>
@@ -20,8 +24,10 @@
   <div class="container">
       <div class="row">
 	      <div class="col-xl-6">
-		      <h1 class="display-2">dgbox.io<span class="vim-caret">&nbsp</span></h1>
-	      <h1 style="color:#FFEA00;text-shadow: 0px 6px 1px #4d4d4d;">disrupting fintech technology</h1>
+		      <h1 class="display-2">dgbox.io <span class="vim-caret">&nbsp</span></h1>
+		      </br>	
+		      </br>	
+		      <h1 style="color:#FFEA00;text-shadow: 0px 6px 1px #4d4d4d;">disrupting fintech technology</h1>
 	      </div>
 
       </div>
