--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		      <h1 class="display-2">dgbox.io <span class="vim-caret">&nbsp</span></h1>
 		      </br>	
 		      </br>	
-		      <h1 style="color:#FFEA00;text-shadow: 0px 6px 1px #4d4d4d;">disrupting fintech technology</h1>
+		      <h1 class="slogan" style="color:#FFEA00;text-shadow: 0px 6px 1px #4d4d4d;">disrupting fintech technology</h1>
 	      </div>
 
       </div>
