--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 	      <div class="col-xl-6">
 		      <h1 class="logo display-2">dgbox.io <span class="vim-caret">&nbsp</span></h1>
 		      </br>	
-		      <h1 class="slogan" style="color:#FFEA00;text-shadow: 0px 6px 1px #4d4d4d;">disrupting fintech technology</h1>
+		      <h1 class="slogan" style="color:#FFEA00;text-shadow: 0px 6px 1px #4d4d4d;">
+			      fintech's sandboxing made simple.
+			      <!--
+		 disrupting fintech technology
+			      -->
+		      </h1>
 	      </div>
 
       </div>
