--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 		      <h1 class="logo display-2">dgbox.io <span class="vim-caret">&nbsp</span></h1>
 		      </br>	
 		      <h1 class="slogan" style="color:#FFEA00;text-shadow: 0px 6px 1px #4d4d4d;">
-			      fintech sandboxing made simple.
+	MENA's fintech jukebox for innovation. Stay tuned!	
 			      <!--
+		 fintech sandboxing made simple.
 		 disrupting fintech technology
 			      -->
 		      </h1>
 	      </div>
-
       </div>
       </div>
   </div>
