--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
   <div class="container">
       <div class="row">
 	      <div class="col-xl-6">
-		      <h1 class="logo display-2">dgbox.io <span class="vim-caret">&nbsp</span></h1>
+		      <!--
+		<h1 class="logo display-2">dgbox.io <span class="vim-caret">&nbsp</span></h1>
+		      --> 
+		      <img src="images/logo.png" alt="" height="90" width="200">  
+		      </br>	
+		      </br>	
 		      </br>	
 		      <h1 class="slogan" style="color:#FFEA00;text-shadow: 0px 6px 1px #4d4d4d;">
-	MENA's fintech jukebox. 
+	MENA's Urban Tech Jukebox. 
 	</br>
 	Stay tuned!	
 			      <!--
